// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentSidebar/Skills/Sidebar should render activity sidebar 1`] = `
<Fragment>
  <SidebarNav
    hasActivityFeed={true}
    selectedView="activity"
  />
  <ActivitySidebar
    file={
      Object {
        "id": "id",
      }
    }
    key="id"
  />
</Fragment>
`;

exports[`components/ContentSidebar/Skills/Sidebar should render details sidebar 1`] = `
<Fragment>
  <SidebarNav
    hasDetails={true}
    selectedView="details"
  />
  <DetailsSidebar
    file={
      Object {
        "id": "id",
      }
    }
    key="id"
  />
</Fragment>
`;

exports[`components/ContentSidebar/Skills/Sidebar should render metadata sidebar 1`] = `
<Fragment>
  <SidebarNav
    hasMetadata={true}
    selectedView="metadata"
  />
  <Component
    file={
      Object {
        "id": "id",
      }
    }
    key="id"
  />
</Fragment>
`;

exports[`components/ContentSidebar/Skills/Sidebar should render no sidebar 1`] = `
<Fragment>
  <SidebarNav />
</Fragment>
`;

exports[`components/ContentSidebar/Skills/Sidebar should render skills sidebar 1`] = `
<Fragment>
  <SidebarNav
    hasSkills={true}
    selectedView="skills"
  />
  <Component
    file={
      Object {
        "id": "id",
      }
    }
    key="id"
  />
</Fragment>
`;
